--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
           <target>11</target>
         </configuration>
       </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+        </plugin>
     </plugins>
   </build>
   <distributionManagement>
@@ -26,7 +30,17 @@
       <url>https://maven.pkg.github.com/sclable/domain-driven-base</url>
     </repository>
   </distributionManagement>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.8.2</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>jakarta.validation</groupId>
@@ -42,6 +56,11 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
