--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
           cache: maven
       - name: Build & Test
         run: mvn -B verify
+      - name: Save package
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: target/*.jar
+          retention-days: 1
 
   publish:
     runs-on: ubuntu-latest
@@ -35,10 +41,13 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         # settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Download package
+      uses: actions/download-artifact@v2
+      with:
+        name: package
+        path: target
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn --batch-mode deploy
+      run: mvn -B deploy:deploy-file -Dfile=target/package
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
