--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,6 @@ jobs:
           cache: maven
       - name: Build & Test
         run: mvn -B verify
-      - name: Save package
-        uses: actions/upload-artifact@v2
-        with:
-          name: package
-          path: target/*.jar
-          retention-days: 1
 
   publish:
     runs-on: ubuntu-latest
@@ -41,13 +35,7 @@ jobs:
         cache: maven
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
 
-    - name: Download package
-      uses: actions/download-artifact@v2
-      with:
-        name: package
-        path: target
-
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn -B deploy:deploy
+      run: mvn -B deploy -DskipTests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
