--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,6 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
 [*]
@@ -12,7 +14,3 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
-
-[Makefile]
-indent_style = tab
-
