--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,5 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
-max_line_length = off
+max_line_length = 120
 trim_trailing_whitespace = false
