--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -26,7 +27,10 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GIT_PUSH_TOKEN }}
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -39,3 +43,9 @@ jobs:
       run: mvn -B deploy -DskipTests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Update documentation
+      run: |
+        mvn javadoc:javadoc
+        git add docs
+        git commit -am "chore(docs): update documentation"
+        git push origin master
