--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.GIT_PUSH_TOKEN }}
+    - name: Configure CI user
+      run: |
+        git config user.email "ci@sclable.com"
+        git config user.name "Sclable CI"
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -47,5 +51,5 @@ jobs:
       run: |
         mvn javadoc:javadoc
         git add docs
-        git commit -am "chore(docs): update documentation"
+        git commit -am "docs(javadoc): update documentation"
         git push origin master
